# actix-web-starter

./: .env.dist  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  generate-client.sh
actix-server/: Cargo.toml  Dockerfile.actix-server  diesel.toml
actix-server/migrations/2018-10-09-101948_users/: up.sql
actix-server/migrations/2024-05-13-180015_create-api-key-table/: down.sql  up.sql
actix-server/migrations/2024-05-15-154919_org_plans/: down.sql  up.sql
actix-server/migrations/2024-05-16-144530_org_plans_subscriptions/: down.sql  up.sql
actix-server/migrations/2024-05-16-151154_fix_names/: down.sql  up.sql
actix-server/migrations/2024-05-16-155505_unique_org_user_link/: down.sql  up.sql
actix-server/migrations/2024-05-16-163958_drop_org_role/: down.sql  up.sql
actix-server/migrations/2024-05-24-143543_refactor_perms/: down.sql  up.sql
actix-server/migrations/2024-05-28-190442_user_invites/: up.sql
actix-server/migrations/2024-05-30-213524_create_deals_table/: down.sql  up.sql
actix-server/migrations/2024-05-31-181845_add_contacts_table/: down.sql  up.sql
actix-server/migrations/2024-06-03-155508_notes/: down.sql  up.sql
actix-server/migrations/2024-06-03-180950_add_link_table/: down.sql  up.sql
actix-server/migrations/2024-06-03-194111_add_email_table/: down.sql  up.sql
actix-server/migrations/2024-06-03-205643_add_phone_table/: down.sql  up.sql
actix-server/migrations/2024-06-04-182138_add_tasks_table/: down.sql  up.sql
actix-server/src/: errors.rs  lib.rs  main.rs  prefixes.rs
generated-openapi-client/: Cargo.toml  README.md  openapi-generator.yaml  openapi.json
generated-openapi-client/.openapi-generator/: FILES
generated-openapi-client/docs/: ApiKeyApi.md  AuthApi.md  CompaniesApi.md  Company.md  Contact.md  ContactsApi.md  CreateApiKeyReqPayload.md  CreateApiKeyRespPayload.md  CreateCompanyReqPayload.md  CreateContactReqPayload.md  CreateDealReqPayload.md  CreateEmailReqPayload.md  CreateLinkReqPayload.md  CreateNoteReqPayload.md  CreateOrgReqPayload.md  CreateOrgResp.md  CreatePhoneReqPayload.md  CreateTaskReqPayload.md  Deal.md  DealsApi.md  Email.md  EmailsApi.md  ErrorRespPayload.md  GetTaskResourceQuery.md  HealthApi.md  Invitation.md  InvitationApi.md  InvitationData.md  InvitationResponse.md  Link.md  LinksApi.md  ListTaskResourceResponse.md  ListTaskResourceResponseOneOf.md  ListTaskResourceResponseOneOf1.md  ListTaskResourceResponseOneOf2.md  Note.md  NotesApi.md  Org.md  OrgNameReqPayload.md  OrgsApi.md  (+27 more)
(+127 files in other folders)
