[package]
name = "actix-server"
version = "1.0.0"
edition = "2021"
default-run = "actix-server"

[profile.release]
debug = 0
incremental = true
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "actix-server"
path = "src/main.rs"

[[bin]]
name = "redoc_ci"
path = "src/bin/redoc_ci.rs"

[dependencies]
actix-identity = { version = "0.7.1" }
actix-session = { version = "0.9.0", features = [
    "redis-rs-session",
    "redis-rs-tls-session",
] }
actix-web = { version = "4.3" }
actix-cors = { version = "0.7" }
chrono = { version = "0.4.20", features = ["serde"] }
derive_more = { version = "0.99.7" }
diesel = { version = "2", features = [
    "uuid",
    "chrono",
    "serde_json",
    "postgres",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
log = "0.4"
serde_json = { version = "1" }
serde = { version = "1" }
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde"] }
diesel_migrations = { version = "2.0" }
tokio = "1.27.0"
futures-util = "0.3.28"
actix = "0.13.0"
futures = "0.3.28"
dotenvy = "0.15.7"
utoipa = { version = "4.2", features = [
    "actix_extras",
    "uuid",
    "chrono",
    "debug",
] }
utoipa-redoc = { version = "4.0", features = ["actix-web"] }
openidconnect = { version = "3.4.0", features = [
    "reqwest",
], default-features = false }
oauth2 = "4.4.2"
sentry = { version = "0.32.2", features = ["tracing"] }
sentry-actix = "0.32.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
sentry-tracing = "0.32.2"
tokio-postgres = "0.7.10"
postgres-openssl = "0.5.0"
openssl = "0.10.64"
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
blake3 = "1.5.1"
bb8-redis = "0.15.0"

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = []
runtime-env = []
