[package]
name = "actix-web-starter-client"
version = "0.0.1"
authors = ["developers@trieve.ai"]
description = "Trieve OpenAPI Specification. This document describes all of the operations available through the Trieve API."
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
